--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,8 @@
                             <a class="nav-link" href="{{ path('app_popular_answers') }}">Answers</a>
                         </li>
                     </ul>
-
+                    
+                    <a href="{{ path('app_login') }}" class="btn btn-light">Log In</a> 
                     <a href="#" class="btn btn-dark">Sign up</a>
                 </div>
             </div>
