--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,7 +7,7 @@
 
     {% if error %}
         <div class="alert alert-danger">
-            {{ error.messageKey }}
+            {{ error.messageKey|trans(error.messageData, 'security') }}
         </div> 
     {% endif %}
     <div class="row">
