--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,7 +23,14 @@
                     <label for="inputPassword">Password</label>
                     <input type="password" name="password" id="inputPassword" class="form-control" required>
                 </div>
+                
+                {# <div class="col-12">
+                    <input type="checkbox" name="remember_me" id="remember_me" value="on">
+                    <label for="remember_me">Remember me</label>
+                </div>  #}
 
+                <input type="hidden" name="_csrf_token"
+                    value="{{ csrf_token('authenticate') }}"> 
                 <div class="col-12">
                     <button class="btn btn-lg btn-primary float-end" type="submit">
                         Sign in
