--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,8 +31,12 @@
                         </li>
                     </ul>
                     
-                    <a href="{{ path('app_login') }}" class="btn btn-light">Log In</a> 
-                    <a href="#" class="btn btn-dark">Sign up</a>
+                    {% if ( is_granted('IS_AUTHENTICATED_REMEMBERED') ) %}
+                        <a href="{{ path('app_logout') }}" class="btn btn-light">Logout</a> 
+                    {% else %} 
+                        <a href="{{ path('app_login') }}" class="btn btn-light">Log In</a> 
+                        <a href="#" class="btn btn-dark">Sign up</a>
+                    {% endif %} 
                 </div>
             </div>
         </nav>
