--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,10 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light px-1">
+        <nav 
+            class="navbar navbar-expand-lg navbar-light bg-light px-1"
+            {{ is_granted('ROLE_PREVIOUS_ADMIN')? 'style="background-color:red !important;':'' }}  
+        >
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{ path('app_homepage') }}">
                     <p class="pl-2 d-inline font-weight-bold" style="color: #444;">
@@ -31,6 +34,15 @@
                         </li>
                     </ul>
                     
+                    {% if is_granted('ROLE_PREVIOUS_ADMIN') %}
+                        <a href="{{ path('app_homepage', {
+                            '_switch_user':'_exit', 
+                        }) 
+                        }}" class="btn btn-danger me-2">exit as User</a>
+                    {% endif  %}
+
+
+
                     {% if ( is_granted('IS_AUTHENTICATED_REMEMBERED') ) %}
                         <a href="{{ path('app_logout') }}" class="btn btn-light">Logout</a> 
                     {% else %} 
