--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,7 +47,7 @@
                         <a href="{{ path('app_logout') }}" class="btn btn-light">Logout</a> 
                     {% else %} 
                         <a href="{{ path('app_login') }}" class="btn btn-light">Log In</a> 
-                        <a href="#" class="btn btn-dark">Sign up</a>
+                        <a href="{{ path('app_register') }}" class="btn btn-dark">Sign up</a>
                     {% endif %} 
                 </div>
             </div>
