--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,8 +51,14 @@
                     {% endif %} 
                 </div>
             </div>
-        </nav>
+        </nav> 
 
+        {% for flash in app.flashes('success') %}
+            <div class="alert alert-success"> 
+                {{ flash }} 
+            </div> 
+        {% endfor %} 
+ 
         {% block body %}{% endblock %}
         <footer class="mt-5 p-3 text-center">
             Made with <i style="color: red;" class="fa fa-heart"></i> by the guys and gals at <a style="color: #444; text-decoration: underline;" href="https://symfonycasts.com">SymfonyCasts</a>
